--- a/bahrain/index.html
+++ b/bahrain/index.html
@@ -8,17 +8,17 @@
         content=" Discover our advanced vehicle safety products, RPM Regulators, Thermopro Systems, Multi Speed Limiters, and Dual Speed Limiters in Bahrain at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/bahrain/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/bahrain/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bahrain/css/animate.min.css">
+    <link rel="stylesheet" href="/bahrain/css/aos.min.css">
+    <link rel="stylesheet" href="/bahrain/css/magnific-popup.css">
+    <link rel="stylesheet" href="/bahrain/css/icofont.min.css">
+    <link rel="stylesheet" href="/bahrain/css/slick.css">
+    <link rel="stylesheet" href="/bahrain/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/bahrain/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -244,7 +244,7 @@
                                             </div>
                                         </div>
                                         <div class="herobannerarea__text herobannerarea__text__2">
-                                            <p class="banner-p">At Resolute Dynamics, we are proud to enhance road safety and operational efficiency in Bahrain with our cutting-edge automotive solutions. Our commitment to innovation ensures we meet the unique needs of Bahrain’s transportation sector.</p>
+                                            <p class="banner-p">At Resolute Dynamics, we are proud to enhance road safety and operational efficiency in Bahrain with our cutting-edge automotive solutions. Our commitment to innovation ensures we meet the unique needs of Bahrain's transportation sector.</p>
                                         </div>
                                         <div class="hreobannerarea__button__2">
                                            <!-- <a class="default__button" href="index.html">Read More</a>-->
@@ -308,7 +308,7 @@
                             </div>
                             <div class="single__blog__content">
                                 <h3 class="product"> <a href="#">Dual Speed Limiter and Multi Speed Limiter</a></h3>
-                                <p class="pro-p">Our advanced dual and multi-speed limiters in Bahrain provide adaptable speed control for various driving scenarios. Whether navigating Bahrain’s busy urban roads or highways, our solutions ensure optimal safety and performance.</p>
+                                <p class="pro-p">Our advanced dual and multi-speed limiters in Bahrain provide adaptable speed control for various driving scenarios. Whether navigating Bahrain's busy urban roads or highways, our solutions ensure optimal safety and performance.</p>
                                 <div class="single__blog__bottom__button">
                                    <!--  <a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
                                 </div>
@@ -324,7 +324,7 @@
                             <div class="single__blog__content">
 
                                 <h3 class="product"> <a href="#">RPM Regulator</a></h3>
-                                <p class="pro-p">Our RPM regulators maintain engine efficiency and longevity by controlling engine revolutions. These devices minimize wear and tear, reduce emissions, and enhance fuel economy—perfect for Bahrain’s eco-conscious businesses.</p>
+                                <p class="pro-p">Our RPM regulators maintain engine efficiency and longevity by controlling engine revolutions. These devices minimize wear and tear, reduce emissions, and enhance fuel economy—perfect for Bahrain's eco-conscious businesses.</p>
                                 <div class="single__blog__bottom__button">
                                     <!-- <a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
                                 </div>
@@ -419,7 +419,7 @@
                                 <div class="instructor__list">
                                 </div>
                                 <div class="instructor__content__wraper" data-aos="fade-up">
-                                    <p>Resolute Dynamics goes beyond providing products; we deliver peace of mind. Our solutions comply with Bahrain’s regulatory requirements, ensuring your fleet operates safely and legally. We are dedicated to improving road safety and helping businesses achieve operational excellence.</p>
+                                    <p>Resolute Dynamics goes beyond providing products; we deliver peace of mind. Our solutions comply with Bahrain's regulatory requirements, ensuring your fleet operates safely and legally. We are dedicated to improving road safety and helping businesses achieve operational excellence.</p>
                                 </div>
                             </div>
                         </div>
@@ -528,23 +528,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/bahrain/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/bahrain/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/bahrain/js/popper.min.js"></script>
+    <script src="/bahrain/js/bootstrap.min.js"></script>
+    <script src="/bahrain/js/isotope.pkgd.min.js"></script>
+    <script src="/bahrain/js/slick.min.js"></script>
+    <script src="/bahrain/js/jquery.meanmenu.min.js"></script>
+    <script src="/bahrain/js/ajax-form.js"></script>
+    <script src="/bahrain/js/wow.min.js"></script>
+    <script src="/bahrain/js/jquery.scrollUp.min.js"></script>
+    <script src="/bahrain/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/bahrain/js/jquery.magnific-popup.min.js"></script>
+    <script src="/bahrain/js/waypoints.min.js"></script>
+    <script src="/bahrain/js/jquery.counterup.min.js"></script>
+    <script src="/bahrain/js/plugins.js"></script>
+    <script src="/bahrain/js/swiper-bundle.min.js"></script>
+    <script src="/bahrain/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
