--- a/egypt/index.html
+++ b/egypt/index.html
@@ -8,17 +8,17 @@
         content="Discover our advanced vehicle safety products, RPM Regulators, Thermopro Systems, Multi Speed Limiters, and Dual Speed Limiters in Egypt at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/egypt/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/egypt/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/egypt/css/animate.min.css">
+    <link rel="stylesheet" href="/egypt/css/aos.min.css">
+    <link rel="stylesheet" href="/egypt/css/magnific-popup.css">
+    <link rel="stylesheet" href="/egypt/css/icofont.min.css">
+    <link rel="stylesheet" href="/egypt/css/slick.css">
+    <link rel="stylesheet" href="/egypt/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/egypt/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -244,7 +244,7 @@
                                             </div>
                                         </div>
                                         <div class="herobannerarea__text herobannerarea__text__2">
-                                            <p class="banner-p">Resolute Dynamics is committed to enhancing road safety and operational efficiency in Egypt through our advanced automotive solutions. Designed to meet Egypt’s unique transportation needs, our products prioritize safety, compliance, and sustainability.</p>
+                                            <p class="banner-p">Resolute Dynamics is committed to enhancing road safety and operational efficiency in Egypt through our advanced automotive solutions. Designed to meet Egypt's unique transportation needs, our products prioritize safety, compliance, and sustainability.</p>
                                         </div>
                                         <div class="hreobannerarea__button__2">
                                            <!-- <a class="default__button" href="index.html">Read More</a>-->
@@ -308,7 +308,7 @@
                             </div>
                             <div class="single__blog__content">
                                 <h3 class="product"> <a href="#">Dual Speed Limiter and Multi Speed Limiter</a></h3>
-                                <p class="pro-p">Tailored for Egypt’s diverse driving conditions, our dual and multi-speed limiters in Egypt provide customizable speed control options. Whether navigating urban streets or highways, our devices ensure optimal safety and performance.</p>
+                                <p class="pro-p">Tailored for Egypt's diverse driving conditions, our dual and multi-speed limiters in Egypt provide customizable speed control options. Whether navigating urban streets or highways, our devices ensure optimal safety and performance.</p>
                                 <div class="single__blog__bottom__button">
                                    <!--  <a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
                                 </div>
@@ -324,7 +324,7 @@
                             <div class="single__blog__content">
 
                                 <h3 class="product"> <a href="#">RPM Regulator</a></h3>
-                                <p class="pro-p">Designed to maintain engine efficiency and extend its life, our RPM regulators are ideal for Egypt’s transport sector. By regulating engine revolutions, they reduce wear and tear, minimize emissions, and improve fuel economy.</p>
+                                <p class="pro-p">Designed to maintain engine efficiency and extend its life, our RPM regulators are ideal for Egypt's transport sector. By regulating engine revolutions, they reduce wear and tear, minimize emissions, and improve fuel economy.</p>
                                 <div class="single__blog__bottom__button">
                                     <!-- <a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
                                 </div>
@@ -388,13 +388,13 @@
                                 <div class="aboutarea__list">
                                     <ul>
                                         <li>
-                                            <i class="icofont-check"></i> Innovative Technology: Cutting-edge automotive solutions tailored to Egypt’s transportation challenges.
+                                            <i class="icofont-check"></i> Innovative Technology: Cutting-edge automotive solutions tailored to Egypt's transportation challenges.
                                         </li>
                                         <li>
                                             <i class="icofont-check"></i> Quality Assurance: Our products are rigorously tested to meet the highest international safety and performance standards.
                                         </li>
                                         <li>
-                                            <i class="icofont-check"></i> Customized Solutions: We deliver tailored solutions to address Egypt’s unique operational and regulatory needs.
+                                            <i class="icofont-check"></i> Customized Solutions: We deliver tailored solutions to address Egypt's unique operational and regulatory needs.
                                         </li>
                                         <li>
                                             <i class="icofont-check"></i> Dedicated Support: Our team is dedicated to providing exceptional service and ensuring you maximize the benefits of our solutions.
@@ -419,7 +419,7 @@
                                 <div class="instructor__list">
                                 </div>
                                 <div class="instructor__content__wraper" data-aos="fade-up">
-                                    <p>Resolute Dynamics is not just about providing products—it’s about delivering peace of mind. Our solutions comply with Egypt’s road safety regulations, ensuring your fleet operates safely and within legal parameters. We are driven by a mission to improve road safety and boost operational efficiency across Egypt.</p>
+                                    <p>Resolute Dynamics is not just about providing products—it's about delivering peace of mind. Our solutions comply with Egypt's road safety regulations, ensuring your fleet operates safely and within legal parameters. We are driven by a mission to improve road safety and boost operational efficiency across Egypt.</p>
                                 </div>
                             </div>
                         </div>
@@ -528,23 +528,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/egypt/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/egypt/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/egypt/js/popper.min.js"></script>
+    <script src="/egypt/js/bootstrap.min.js"></script>
+    <script src="/egypt/js/isotope.pkgd.min.js"></script>
+    <script src="/egypt/js/slick.min.js"></script>
+    <script src="/egypt/js/jquery.meanmenu.min.js"></script>
+    <script src="/egypt/js/ajax-form.js"></script>
+    <script src="/egypt/js/wow.min.js"></script>
+    <script src="/egypt/js/jquery.scrollUp.min.js"></script>
+    <script src="/egypt/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/egypt/js/jquery.magnific-popup.min.js"></script>
+    <script src="/egypt/js/waypoints.min.js"></script>
+    <script src="/egypt/js/jquery.counterup.min.js"></script>
+    <script src="/egypt/js/plugins.js"></script>
+    <script src="/egypt/js/swiper-bundle.min.js"></script>
+    <script src="/egypt/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
