--- a/egypt/thanks.html
+++ b/egypt/thanks.html
@@ -9,18 +9,18 @@
         content="Discover our advanced vehicle safety products, RPM Regulators, Smart Lift Systems, Multi Speed Limiters, and Dual Speed Limiters in Oman at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/egypt/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/egypt/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/egypt/css/animate.min.css">
+    <link rel="stylesheet" href="/egypt/css/aos.min.css">
+    <link rel="stylesheet" href="/egypt/css/magnific-popup.css">
+    <link rel="stylesheet" href="/egypt/css/icofont.min.css">
+    <link rel="stylesheet" href="/egypt/css/slick.css">
+    <link rel="stylesheet" href="/egypt/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/egypt/css/style.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script>
@@ -106,23 +106,23 @@
  
 
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/egypt/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/egypt/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/egypt/js/popper.min.js"></script>
+    <script src="/egypt/js/bootstrap.min.js"></script>
+    <script src="/egypt/js/isotope.pkgd.min.js"></script>
+    <script src="/egypt/js/slick.min.js"></script>
+    <script src="/egypt/js/jquery.meanmenu.min.js"></script>
+    <script src="/egypt/js/ajax-form.js"></script>
+    <script src="/egypt/js/wow.min.js"></script>
+    <script src="/egypt/js/jquery.scrollUp.min.js"></script>
+    <script src="/egypt/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/egypt/js/jquery.magnific-popup.min.js"></script>
+    <script src="/egypt/js/waypoints.min.js"></script>
+    <script src="/egypt/js/jquery.counterup.min.js"></script>
+    <script src="/egypt/js/plugins.js"></script>
+    <script src="/egypt/js/swiper-bundle.min.js"></script>
+    <script src="/egypt/js/main.js"></script>
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
