--- a/india/index.html
+++ b/india/index.html
@@ -8,17 +8,17 @@
         content="Discover our advanced vehicle safety products, RPM Regulators, Smart Lift Systems, Multi Speed Limiters, and Dual Speed Limiters in India at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/india/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/india/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/india/css/animate.min.css">
+    <link rel="stylesheet" href="/india/css/aos.min.css">
+    <link rel="stylesheet" href="/india/css/magnific-popup.css">
+    <link rel="stylesheet" href="/india/css/icofont.min.css">
+    <link rel="stylesheet" href="/india/css/slick.css">
+    <link rel="stylesheet" href="/india/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/india/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -311,7 +311,7 @@
                             <div class="single__blog__content">
 
                                 <h3 class="product"> <a href="#">Dual Speed Limiter and Multi Speed Limiter</a></h3>
-                                <p class="pro-p">Our Dual and Multi Speed Limiters in India give drivers flexible speed control options for different driving conditions in India. Whether you’re on the highway or in the city, these systems offer preset speed limits to ensure safe and smooth driving.</p>
+                                <p class="pro-p">Our Dual and Multi Speed Limiters in India give drivers flexible speed control options for different driving conditions in India. Whether you're on the highway or in the city, these systems offer preset speed limits to ensure safe and smooth driving.</p>
 
                                 <div class="single__blog__bottom__button">
                                      <!--<a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
@@ -328,7 +328,7 @@
                             <div class="single__blog__content">
 
                                 <h3 class="product"> <a href="#">RPM Regulator</a></h3>
-                                <p class="pro-p">Our RPM Regulators are made to keep engines running efficiently and last longer. By managing the engine’s RPM, we help reduce wear and tear, lower emissions, and improve fuel efficiency, which is important for India’s varied road conditions.</p>
+                                <p class="pro-p">Our RPM Regulators are made to keep engines running efficiently and last longer. By managing the engine's RPM, we help reduce wear and tear, lower emissions, and improve fuel efficiency, which is important for India's varied road conditions.</p>
                                 <div class="single__blog__bottom__button">
                                      <!--<a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
                                 </div>
@@ -425,7 +425,7 @@
                                 </div>
                                 <div class="instructor__content__wraper" data-aos="fade-up">
 
-                                    <p>At Resolute Dynamics, we don’t just offer products; we offer peace of mind. Our speed limiters and safety solutions are designed to meet India’s local regulations, ensuring your vehicles operate legally and safely. We are committed to making Indian roads safer and helping businesses run more efficiently.</p>
+                                    <p>At Resolute Dynamics, we don't just offer products; we offer peace of mind. Our speed limiters and safety solutions are designed to meet India's local regulations, ensuring your vehicles operate legally and safely. We are committed to making Indian roads safer and helping businesses run more efficiently.</p>
                                 </div>
                             </div>
                         </div>
@@ -450,7 +450,7 @@
                             <div class="registerarea__content">
                                 <div class="registerarea__video">
                                     <div class="registerarea__para">
-                                        <p>Want to improve the safety and efficiency of your vehicles? Contact us today to learn more about how our innovative solutions can help you achieve your goals.We’re here to answer any questions you may have.
+                                        <p>Want to improve the safety and efficiency of your vehicles? Contact us today to learn more about how our innovative solutions can help you achieve your goals.We're here to answer any questions you may have.
                                         </p>
                                     </div>
                                 </div>
@@ -535,23 +535,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/india/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/india/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/india/js/popper.min.js"></script>
+    <script src="/india/js/bootstrap.min.js"></script>
+    <script src="/india/js/isotope.pkgd.min.js"></script>
+    <script src="/india/js/slick.min.js"></script>
+    <script src="/india/js/jquery.meanmenu.min.js"></script>
+    <script src="/india/js/ajax-form.js"></script>
+    <script src="/india/js/wow.min.js"></script>
+    <script src="/india/js/jquery.scrollUp.min.js"></script>
+    <script src="/india/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/india/js/jquery.magnific-popup.min.js"></script>
+    <script src="/india/js/waypoints.min.js"></script>
+    <script src="/india/js/jquery.counterup.min.js"></script>
+    <script src="/india/js/plugins.js"></script>
+    <script src="/india/js/swiper-bundle.min.js"></script>
+    <script src="/india/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
