--- a/kuwait/index.html
+++ b/kuwait/index.html
@@ -8,17 +8,17 @@
         content="Discover our advanced vehicle safety products, RPM Regulators, Thermopro Systems, Multi Speed Limiters, and Dual Speed Limiters in Kuwait at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/kuwait/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/kuwait/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/kuwait/css/animate.min.css">
+    <link rel="stylesheet" href="/kuwait/css/aos.min.css">
+    <link rel="stylesheet" href="/kuwait/css/magnific-popup.css">
+    <link rel="stylesheet" href="/kuwait/css/icofont.min.css">
+    <link rel="stylesheet" href="/kuwait/css/slick.css">
+    <link rel="stylesheet" href="/kuwait/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/kuwait/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -244,7 +244,7 @@
                                             </div>
                                         </div>
                                         <div class="herobannerarea__text herobannerarea__text__2">
-                                            <p class="banner-p">At Resolute Dynamics, we are dedicated to transforming road safety and operational efficiency in Kuwait through our state-of-the-art automotive solutions. Our products are designed to meet the unique needs of Kuwait’s transportation sector while adhering to local regulations.</p>
+                                            <p class="banner-p">At Resolute Dynamics, we are dedicated to transforming road safety and operational efficiency in Kuwait through our state-of-the-art automotive solutions. Our products are designed to meet the unique needs of Kuwait's transportation sector while adhering to local regulations.</p>
                                         </div>
                                         <div class="hreobannerarea__button__2">
                                            <!-- <a class="default__button" href="index.html">Read More</a>-->
@@ -308,7 +308,7 @@
                             </div>
                             <div class="single__blog__content">
                                 <h3 class="product"> <a href="#">Dual Speed Limiter and Multi Speed Limiter</a></h3>
-                                <p class="pro-p">Our dual and multi-speed limiters in Kuwait offer customizable speed control for different driving conditions. These solutions ensure optimal safety and performance, whether you’re driving on Kuwait’s highways or within its bustling cities.</p>
+                                <p class="pro-p">Our dual and multi-speed limiters in Kuwait offer customizable speed control for different driving conditions. These solutions ensure optimal safety and performance, whether you're driving on Kuwait's highways or within its bustling cities.</p>
                                 <div class="single__blog__bottom__button">
                                    <!--  <a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
                                 </div>
@@ -324,7 +324,7 @@
                             <div class="single__blog__content">
 
                                 <h3 class="product"> <a href="#">RPM Regulator</a></h3>
-                                <p class="pro-p">Our RPM regulators are engineered to maintain engine efficiency and extend its lifespan. By controlling engine revolutions, they minimize wear and tear, lower emissions, and improve fuel economy, addressing Kuwait’s environmental sustainability goals.</p>
+                                <p class="pro-p">Our RPM regulators are engineered to maintain engine efficiency and extend its lifespan. By controlling engine revolutions, they minimize wear and tear, lower emissions, and improve fuel economy, addressing Kuwait's environmental sustainability goals.</p>
                                 <div class="single__blog__bottom__button">
                                     <!-- <a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
                                 </div>
@@ -394,7 +394,7 @@
                                             <i class="icofont-check"></i> Quality Assurance: Our products undergo rigorous testing to meet the highest safety and performance standards.
                                         </li>
                                         <li>
-                                            <i class="icofont-check"></i> Customized Solutions: Tailored solutions to meet the specific requirements of Kuwait’s businesses.
+                                            <i class="icofont-check"></i> Customized Solutions: Tailored solutions to meet the specific requirements of Kuwait's businesses.
                                         </li>
                                         <li>
                                             <i class="icofont-check"></i> Dedicated Support: A customer-centric team ready to provide exceptional service and ensure optimal product performance.
@@ -419,7 +419,7 @@
                                 <div class="instructor__list">
                                 </div>
                                 <div class="instructor__content__wraper" data-aos="fade-up">
-                                    <p>At Resolute Dynamics, we go beyond offering products—we provide peace of mind. Our safety solutions are designed to comply with Kuwait’s regulatory framework, ensuring that your fleet operates safely and within legal parameters. We are committed to enhancing road safety and operational excellence for businesses in Kuwait.</p>
+                                    <p>At Resolute Dynamics, we go beyond offering products—we provide peace of mind. Our safety solutions are designed to comply with Kuwait's regulatory framework, ensuring that your fleet operates safely and within legal parameters. We are committed to enhancing road safety and operational excellence for businesses in Kuwait.</p>
                                 </div>
                             </div>
                         </div>
@@ -528,23 +528,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/kuwait/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/kuwait/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/kuwait/js/popper.min.js"></script>
+    <script src="/kuwait/js/bootstrap.min.js"></script>
+    <script src="/kuwait/js/isotope.pkgd.min.js"></script>
+    <script src="/kuwait/js/slick.min.js"></script>
+    <script src="/kuwait/js/jquery.meanmenu.min.js"></script>
+    <script src="/kuwait/js/ajax-form.js"></script>
+    <script src="/kuwait/js/wow.min.js"></script>
+    <script src="/kuwait/js/jquery.scrollUp.min.js"></script>
+    <script src="/kuwait/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/kuwait/js/jquery.magnific-popup.min.js"></script>
+    <script src="/kuwait/js/waypoints.min.js"></script>
+    <script src="/kuwait/js/jquery.counterup.min.js"></script>
+    <script src="/kuwait/js/plugins.js"></script>
+    <script src="/kuwait/js/swiper-bundle.min.js"></script>
+    <script src="/kuwait/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
