--- a/oman/index.html
+++ b/oman/index.html
@@ -8,17 +8,17 @@
         content="Discover our advanced vehicle safety products, RPM Regulators, Smart Lift Systems, Multi Speed Limiters, and Dual Speed Limiters in Oman at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/oman/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/oman/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/oman/css/animate.min.css">
+    <link rel="stylesheet" href="/oman/css/aos.min.css">
+    <link rel="stylesheet" href="/oman/css/magnific-popup.css">
+    <link rel="stylesheet" href="/oman/css/icofont.min.css">
+    <link rel="stylesheet" href="/oman/css/slick.css">
+    <link rel="stylesheet" href="/oman/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/oman/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -558,23 +558,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/oman/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/oman/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/oman/js/popper.min.js"></script>
+    <script src="/oman/js/bootstrap.min.js"></script>
+    <script src="/oman/js/isotope.pkgd.min.js"></script>
+    <script src="/oman/js/slick.min.js"></script>
+    <script src="/oman/js/jquery.meanmenu.min.js"></script>
+    <script src="/oman/js/ajax-form.js"></script>
+    <script src="/oman/js/wow.min.js"></script>
+    <script src="/oman/js/jquery.scrollUp.min.js"></script>
+    <script src="/oman/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/oman/js/jquery.magnific-popup.min.js"></script>
+    <script src="/oman/js/waypoints.min.js"></script>
+    <script src="/oman/js/jquery.counterup.min.js"></script>
+    <script src="/oman/js/plugins.js"></script>
+    <script src="/oman/js/swiper-bundle.min.js"></script>
+    <script src="/oman/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
