--- a/philippines/index.html
+++ b/philippines/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Philippines Speed Limiters, RPM Regulators, and Automotive Safety Solutions</title>
     <meta name="description"
-        content="Explore Resolute Dynamics’ cutting-edge speed limiters and automotive safety solutions in the Philippines. Ensure compliance with Republic Act 10916 and enhance road safety with certified, fuel-efficient technologies.">
+        content="Explore Resolute Dynamics' cutting-edge speed limiters and automotive safety solutions in the Philippines. Ensure compliance with Republic Act 10916 and enhance road safety with certified, fuel-efficient technologies.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/philippines/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/philippines/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/philippines/css/animate.min.css">
+    <link rel="stylesheet" href="/philippines/css/aos.min.css">
+    <link rel="stylesheet" href="/philippines/css/magnific-popup.css">
+    <link rel="stylesheet" href="/philippines/css/icofont.min.css">
+    <link rel="stylesheet" href="/philippines/css/slick.css">
+    <link rel="stylesheet" href="/philippines/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/philippines/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -324,7 +324,7 @@
                             <div class="single__blog__content">
 
                                 <h3 class="product"> <a href="#">RPM Regulator</a></h3>
-                                <p class="pro-p">Our <b>RPM Regulators</b> are designed to enhance engine performance and longevity by controlling the engine’s revolutions per minute (RPM). This reduces wear and tear, improves fuel economy, and lowers emissions, ensuring smoother vehicle operation.</p>
+                                <p class="pro-p">Our <b>RPM Regulators</b> are designed to enhance engine performance and longevity by controlling the engine's revolutions per minute (RPM). This reduces wear and tear, improves fuel economy, and lowers emissions, ensuring smoother vehicle operation.</p>
                                 <div class="single__blog__bottom__button">
                                     <!-- <a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
                                 </div>
@@ -541,23 +541,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/philippines/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/philippines/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/philippines/js/popper.min.js"></script>
+    <script src="/philippines/js/bootstrap.min.js"></script>
+    <script src="/philippines/js/isotope.pkgd.min.js"></script>
+    <script src="/philippines/js/slick.min.js"></script>
+    <script src="/philippines/js/jquery.meanmenu.min.js"></script>
+    <script src="/philippines/js/ajax-form.js"></script>
+    <script src="/philippines/js/wow.min.js"></script>
+    <script src="/philippines/js/jquery.scrollUp.min.js"></script>
+    <script src="/philippines/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/philippines/js/jquery.magnific-popup.min.js"></script>
+    <script src="/philippines/js/waypoints.min.js"></script>
+    <script src="/philippines/js/jquery.counterup.min.js"></script>
+    <script src="/philippines/js/plugins.js"></script>
+    <script src="/philippines/js/swiper-bundle.min.js"></script>
+    <script src="/philippines/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
