--- a/qatar/index.html
+++ b/qatar/index.html
@@ -8,17 +8,17 @@
         content="Discover our advanced vehicle safety products, RPM Regulators, Thermopro Systems, Multi Speed Limiters, and Dual Speed Limiters in Qatar at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/qatar/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/qatar/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/qatar/css/animate.min.css">
+    <link rel="stylesheet" href="/qatar/css/aos.min.css">
+    <link rel="stylesheet" href="/qatar/css/magnific-popup.css">
+    <link rel="stylesheet" href="/qatar/css/icofont.min.css">
+    <link rel="stylesheet" href="/qatar/css/slick.css">
+    <link rel="stylesheet" href="/qatar/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/qatar/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -397,7 +397,7 @@
                                             <i class="icofont-check"></i> Quality Assurance: Our products undergo stringent testing to meet the highest safety and performance standards.
                                         </li>
                                         <li>
-                                            <i class="icofont-check"></i> Customized Solutions: Understanding Qatar’s unique needs, we provide tailored solutions for our clients.
+                                            <i class="icofont-check"></i> Customized Solutions: Understanding Qatar's unique needs, we provide tailored solutions for our clients.
                                         </li>
                                         <li>
                                             <i class="icofont-check"></i> Dedicated Support: Our team is committed to delivering exceptional customer service, ensuring you maximize the benefits of our products.
@@ -422,7 +422,7 @@
                                 <div class="instructor__list">
                                 </div>
                                 <div class="instructor__content__wraper" data-aos="fade-up">
-                                    <p>Resolute Dynamics is not just about delivering products; it’s about providing peace of mind. Our solutions comply with local regulations in Qatar, ensuring that your fleet operates within legal boundaries. We are passionate about improving road safety and helping businesses achieve operational excellence.</p>
+                                    <p>Resolute Dynamics is not just about delivering products; it's about providing peace of mind. Our solutions comply with local regulations in Qatar, ensuring that your fleet operates within legal boundaries. We are passionate about improving road safety and helping businesses achieve operational excellence.</p>
                                 </div>
                             </div>
                         </div>
@@ -531,23 +531,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/qatar/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/qatar/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/qatar/js/popper.min.js"></script>
+    <script src="/qatar/js/bootstrap.min.js"></script>
+    <script src="/qatar/js/isotope.pkgd.min.js"></script>
+    <script src="/qatar/js/slick.min.js"></script>
+    <script src="/qatar/js/jquery.meanmenu.min.js"></script>
+    <script src="/qatar/js/ajax-form.js"></script>
+    <script src="/qatar/js/wow.min.js"></script>
+    <script src="/qatar/js/jquery.scrollUp.min.js"></script>
+    <script src="/qatar/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/qatar/js/jquery.magnific-popup.min.js"></script>
+    <script src="/qatar/js/waypoints.min.js"></script>
+    <script src="/qatar/js/jquery.counterup.min.js"></script>
+    <script src="/qatar/js/plugins.js"></script>
+    <script src="/qatar/js/swiper-bundle.min.js"></script>
+    <script src="/qatar/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
