--- a/zimbabwe/index.html
+++ b/zimbabwe/index.html
@@ -8,17 +8,17 @@
         content="Discover our advanced vehicle safety products, RPM Regulators, Smart Lift Systems, Multi Speed Limiters, and Dual Speed Limiters in Zimbabwe at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/zimbabwe/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/zimbabwe/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/zimbabwe/css/animate.min.css">
+    <link rel="stylesheet" href="/zimbabwe/css/aos.min.css">
+    <link rel="stylesheet" href="/zimbabwe/css/magnific-popup.css">
+    <link rel="stylesheet" href="/zimbabwe/css/icofont.min.css">
+    <link rel="stylesheet" href="/zimbabwe/css/slick.css">
+    <link rel="stylesheet" href="/zimbabwe/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/zimbabwe/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -310,7 +310,7 @@
                             </div>
                             <div class="single__blog__content">
                                 <h3 class="product"> <a href="#">Dual Speed Limiter and Multi Speed Limiter</a></h3>
-                                <p class="pro-p">Our innovative Dual and Multi Speed Limiters in Zimbabwe offer adaptable speed control options suited to Zimbabwe’s diverse driving conditions. Whether navigating rural roads or urban streets, these systems allow for multiple preset speed limits, ensuring optimal performance and safety.</p>
+                                <p class="pro-p">Our innovative Dual and Multi Speed Limiters in Zimbabwe offer adaptable speed control options suited to Zimbabwe's diverse driving conditions. Whether navigating rural roads or urban streets, these systems allow for multiple preset speed limits, ensuring optimal performance and safety.</p>
 
                                 <div class="single__blog__bottom__button">
                                      <!--<a href="#">Read More <i class="icofont-long-arrow-right"></i></a>-->
@@ -424,7 +424,7 @@
                                 </div>
                                 <div class="instructor__content__wraper" data-aos="fade-up">
 
-                                    <p>At Resolute Dynamics, our focus is not just on delivering products but on providing peace of mind. Our speed limiters and safety solutions are designed to comply with Zimbabwe’s local regulations, ensuring your fleet operates within the legal framework. We are dedicated to enhancing road safety and helping businesses operate more efficiently across Zimbabwe.</p>
+                                    <p>At Resolute Dynamics, our focus is not just on delivering products but on providing peace of mind. Our speed limiters and safety solutions are designed to comply with Zimbabwe's local regulations, ensuring your fleet operates within the legal framework. We are dedicated to enhancing road safety and helping businesses operate more efficiently across Zimbabwe.</p>
                                 </div>
                             </div>
                         </div>
@@ -449,7 +449,7 @@
                             <div class="registerarea__content">
                                 <div class="registerarea__video">
                                     <div class="registerarea__para">
-                                        <p>Ready to improve the safety and efficiency of your vehicles? Contact us today to discover how our innovative solutions can help you achieve your goals. We’re here to assist with any questions or inquiries.
+                                        <p>Ready to improve the safety and efficiency of your vehicles? Contact us today to discover how our innovative solutions can help you achieve your goals. We're here to assist with any questions or inquiries.
                                         </p>
                                     </div>
                                 </div>
@@ -534,23 +534,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/zimbabwe/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/zimbabwe/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/zimbabwe/js/popper.min.js"></script>
+    <script src="/zimbabwe/js/bootstrap.min.js"></script>
+    <script src="/zimbabwe/js/isotope.pkgd.min.js"></script>
+    <script src="/zimbabwe/js/slick.min.js"></script>
+    <script src="/zimbabwe/js/jquery.meanmenu.min.js"></script>
+    <script src="/zimbabwe/js/ajax-form.js"></script>
+    <script src="/zimbabwe/js/wow.min.js"></script>
+    <script src="/zimbabwe/js/jquery.scrollUp.min.js"></script>
+    <script src="/zimbabwe/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/zimbabwe/js/jquery.magnific-popup.min.js"></script>
+    <script src="/zimbabwe/js/waypoints.min.js"></script>
+    <script src="/zimbabwe/js/jquery.counterup.min.js"></script>
+    <script src="/zimbabwe/js/plugins.js"></script>
+    <script src="/zimbabwe/js/swiper-bundle.min.js"></script>
+    <script src="/zimbabwe/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
