--- a/saudi-arabia/index.html
+++ b/saudi-arabia/index.html
@@ -7,17 +7,17 @@
     <meta name="description"
         content="Discover our advanced vehicle safety products, RPM Regulators, Smart Lift Systems, Multi Speed Limiters, and Dual Speed Limiters in Saudi Arabia at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/saudi-arabia/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/saudi-arabia/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/saudi-arabia/css/animate.min.css">
+    <link rel="stylesheet" href="/saudi-arabia/css/aos.min.css">
+    <link rel="stylesheet" href="/saudi-arabia/css/magnific-popup.css">
+    <link rel="stylesheet" href="/saudi-arabia/css/icofont.min.css">
+    <link rel="stylesheet" href="/saudi-arabia/css/slick.css">
+    <link rel="stylesheet" href="/saudi-arabia/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/saudi-arabia/css/style.css">
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2Z7H6EXWD"></script>
     <script>
@@ -535,23 +535,23 @@
         <!-- footer__section__end -->
     </main>
     <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/saudi-arabia/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="/saudi-arabia/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/saudi-arabia/js/popper.min.js"></script>
+    <script src="/saudi-arabia/js/bootstrap.min.js"></script>
+    <script src="/saudi-arabia/js/isotope.pkgd.min.js"></script>
+    <script src="/saudi-arabia/js/slick.min.js"></script>
+    <script src="/saudi-arabia/js/jquery.meanmenu.min.js"></script>
+    <script src="/saudi-arabia/js/ajax-form.js"></script>
+    <script src="/saudi-arabia/js/wow.min.js"></script>
+    <script src="/saudi-arabia/js/jquery.scrollUp.min.js"></script>
+    <script src="/saudi-arabia/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/saudi-arabia/js/jquery.magnific-popup.min.js"></script>
+    <script src="/saudi-arabia/js/waypoints.min.js"></script>
+    <script src="/saudi-arabia/js/jquery.counterup.min.js"></script>
+    <script src="/saudi-arabia/js/plugins.js"></script>
+    <script src="/saudi-arabia/js/swiper-bundle.min.js"></script>
+    <script src="/saudi-arabia/js/main.js"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
